--- a/src/styles/calculator.scss
+++ b/src/styles/calculator.scss
@@ -7,6 +7,7 @@ body {
   font-size: 20px;
   font-family: 'Source Sans Pro', 'Helvetica', sans-serif;
   color: $default-font-color;
+  overflow-y: scroll;
 }
 
 a { display: inline; color: $ccl-blue;}
